<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:text="6"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="number"
        android:text="7"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCalculer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"

        android:text="=" />

    <CheckBox
        android:id="@+id/cbHideResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hide result" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="13"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>